Body count metadata and fixes for patient metadata alignment.

--- a/src/app/views/body/body.component.scss
+++ b/src/app/views/body/body.component.scss
@@ -2,35 +2,34 @@
   height: 100%;
 
   .container {
+    display: flex;
     height: 100%;
 
-    .organ-metadata {
-      position: absolute;
-      right: 1rem;
-      height: fit-content;
-          width: 13%;
-      top: 1rem;
-          margin-right: 8%;
-
-          .header {
-            display: flex;
-            justify-content: space-between;
-            width: 47%;
-          }
-    }
-
     .body-details-container {
+      display: flex;
       width: 100%;
       height: 100%;
       text-align: center;
-            .organ {
-              border: 1px solid red;
-              left: 70%;
+
+      .organ {
+        left: 70%;
+      }
 
       .body {
-        width: 100%;
+        width: 76%;
         height: 100%;
-            .organ-icon {
+
+        .overlay {
+          cursor: pointer;
+        }
+      }
+
+      .organ-metadata {
+        width: 24%;
+        .header {
+          display: flex;
+          justify-content: center;
+        }
       }
     }
   }
